--- a/settings/_settings.colours.scss
+++ b/settings/_settings.colours.scss
@@ -19,6 +19,7 @@ $black: #000;
 /* ===== BRANDED & ORIGINAL ============================================================ */
 
 $green-victoria:        #64a659;
+$green-victoria-old:    #449F37;
 $black-victoria:        #1d2624;
 $green-victoria-study:  #549349;
 
