--- a/components/_components.banners.scss
+++ b/components/_components.banners.scss
@@ -5,28 +5,34 @@
 
 /* Banner with background cover */
 
-$banner-cover-max-width: 1200px;
-$banner-cover-text-colour: $white;
+$banner-cover-max-width:    1200px;
+$banner-cover-text-colour:  $white;
+$banner-cover-max-height:   620px;
+
 .banner-with-cover {
     position: relative;
     overflow: hidden;
     height: auto;
+
     .cover-overlay {
         @include position( absolute, 0 0 0 0);
         @include size( 100% 100%);
-        background-color: rgba( #171917, .2);
+        //background-color: rgba( #171917, .2);
         // @include linear-gradient( transparent 0%, transparent 40%, rgba( #171917, .8 ) 100% ); // TODO: Improve using non-linear functino @include linear-gradient(50deg, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%);
     }
+
     .cover-holder {
         display: block;
         margin: 0 auto;
         text-align: center;
     }
+
     .cover-pic {
         @include position( absolute, null 0 0 0);
         min-height: 100%;
         min-width: $banner-cover-max-width;
         width: 100%;
+
         // Specific to this particular image and its width.
         @media screen and ( max-width: $banner-cover-max-width) {
             left: 50%;
@@ -34,35 +40,45 @@ $banner-cover-text-colour: $white;
         }
     }
     .intro {
-        @include outer-container(990px);
+        @include outer-container( 990px );
         @include position( relative);
         margin-top: 0;
         margin-bottom: 0.25em;
-        padding: 0 $base-padding;
+        padding: 2.2em $base-padding * 1.6;
         color: $banner-cover-text-colour;
         text-align: center;
         z-index: $z-index-lower;
-        @include media ($desktop-and-bigger) {
-            margin-top: 3em;
-            margin-bottom: 2.5em;
-        }
+
         .banner-link {
             color: $white;
             text-decoration: underline;
             display: block;
-
         }
     }
     .title {
         display: inline-block;
         padding: .35em .75em;
+        margin-top: 1.7em;
+        margin-bottom: .5em;
         color: $banner-cover-text-colour;
-        background-color: rgba($green-victoria, 0.9);
+        background-color: rgba( $green-victoria-old, .75 );
     }
+
     .abstract {
-        // font-size: 150%;
         color: $white;
-        padding: 0.5em;
-        background-color: rgba($green-victoria, 0.9);
+        padding: .6em .9em;
+        background-color: rgba( $green-victoria-old, .75 );
+    }
+
+    @include media( $tablet-and-smaller ){
+        .intro{ padding: 1.6em; }
+        .title{ font-size: 2em; margin-top: 1em; }
+        .abstract{ font-size: 1.3em; }
+    }
+
+    @include media( $mobile-large-and-smaller ){
+        .intro{ padding: 1em; }
+        .title{ margin: 0 0 .5em; }
+        .abstract{ margin: 0; font-size: 1.3em; }
     }
 }
