--- a/components/_components.quote-block.scss
+++ b/components/_components.quote-block.scss
@@ -132,3 +132,12 @@ $bg-color: $grey-gallery;
         border-bottom: 0;
     }
 }
+
+// TODO: Refactor!
+.image-promo-block {
+    .promo-body .promo-action {
+        margin-top: 0;
+    }
+
+    padding-left: $base-margin; padding-right: $base-margin;
+}
