--- a/objects/_objects.forms.scss
+++ b/objects/_objects.forms.scss
@@ -5,9 +5,7 @@
 .form {
 
     // TODO: Refactor!
-    .form__group {
-        padding: 1em 0;
-    }
+    .form__group { padding: 1em 0; }
 
     .form__select {
         height: 2.3em;
