--- a/components/_components.navigation.scss
+++ b/components/_components.navigation.scss
@@ -86,7 +86,9 @@ $menu-tabbed-item-active-bg-colour: $green-victoria !default;
 // Makes two col button container with one button left & one right
 .two-btn-nav {
     @include make-table-column($two-btn-layout);
+    vertical-align: top;
     padding: 1.5em 0.5em;
+
     p {
         font-size: 80%;
         color: $grey-stack;
