--- a/objects/_objects.icons.scss
+++ b/objects/_objects.icons.scss
@@ -61,7 +61,6 @@ $ico-code-search:               '\e81b';
 
 //why is this not spelt .icon? Not typing the 'n' is just lazy - irwinna 1.3.16
 .ico {
-
     font-weight: normal;
 
     &:before {
@@ -81,10 +80,10 @@ $ico-code-search:               '\e81b';
     @include define-icon( email, $ico-code-mail );
     @include define-icon( phone, $ico-code-phone );
     @include define-icon( tooltip-icon, $ico-code-help );
+    &.tooltip-icon { display: inline-block; }
 
     @include define-icon( clock, $ico-code-clock );
     @include define-icon( dollar, $ico-code-dollar );
-
 
     @include define-icon( quote-start, $ico-code-quote-start );
     @include define-icon( quote-end, $ico-code-quote-end );
@@ -93,7 +92,6 @@ $ico-code-search:               '\e81b';
     @include define-icon( arr-left, $ico-code-arr-left );
     @include define-icon( arr-up, $ico-code-arr-up );
     @include define-icon( arr-down, $ico-code-arr-down );
-
 
     @include define-icon( arr-short-left, $ico-code-arr-short-left );
     @include define-icon( arr-short-down, $ico-code-arr-short-down );
