--- a/3-generic/_generic.print.scss
+++ b/3-generic/_generic.print.scss
@@ -73,6 +73,12 @@
     h5 {
         // font-size: 1em !important;
     }
+    
+    
+
+    //irwinna - Need to seperate out the project specific elements and the generic elements, also need to move the print.scss file to components possibly
+
+
     // Hide stuff we don't need to print
     #site-header,
     .cover-holder,
