--- a/4-base/_base.base.scss
+++ b/4-base/_base.base.scss
@@ -5,6 +5,7 @@
 
 /* Non-specific elements (= without classes or IDs), eg. body, h1, p etc. */
 
+@import 'base.forms';
 @import 'base.inputs';
 @import 'base.layout';
 @import 'base.typography';
