--- a/7-trumps/_trumps.new-navigation.scss
+++ b/7-trumps/_trumps.new-navigation.scss
@@ -2,9 +2,53 @@
 =            REDESIGNED NAVIGATION            =
 =============================================*/
 
-
-
-
+// New header
+#new-header {
+    width: 100%;
+    background-color: $vic-green;
+    a {
+        color: #fff;
+    }
+    nav {
+        ul {
+            display: inline-block;
+            width: 100%;
+        }
+        li {
+            width: 100%;
+            position: relative;
+            -moz-box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+            display: inline-block;
+            &:first-child a {
+                border-top: 0;
+                border-radius: 3px 3px 0 0;
+            }
+            &:last-child a {
+                border-radius: 0 0 3px 3px;
+            }
+        }
+        a {
+            font: {
+                family: $heading-font-family;
+                size: 1.5em;
+            }
+            font-size: 1.5em;
+            background-color: rgba( 0, 0, 0, 0.5);
+            text-align: left;
+            padding: 10px 20px;
+            display: block;
+            border-top: 2px solid rgba(250, 250, 250, 0.15);
+            transition: all 0.3s linear;
+            @include hoverify {
+                background-color: $white;
+                color: $vic-green;
+                border-top: 2px solid $vic-green;
+            }
+        }
+    }
+}
 
 #nav_search {
     margin: 30px 0;
@@ -13,25 +57,26 @@
     border-radius: $base-border-radius;
     & input[type=submit] {
         width: 100%;
+        margin: 0;
     }
 }
 
+#activate_nav_search.btn {
+    // padding: 1em;s
+    font-size: 1.5em;
+}
 
 #secondary_menu {
     height: 20px;
-
     .main_wrapper {
         position: relative;
         overflow-x: auto;
         min-height: 45px;
-
         .sub_wrapper {
             position: absolute;
             background-color: rgba(0, 0, 0, 0.4);
-
         }
     }
-
     a.cycle_nav {
         display: block;
         background-color: $vic-black;
@@ -39,12 +84,10 @@
         z-index: 2;
         clear: both;
         padding: 10px 5px;
-
         @include hoverify {
             background-color: $white;
             color: $vic-black;
         }
-
         &.hide_nav_button {
             display: none;
         }
@@ -64,12 +107,10 @@
                 color: $light-grey;
                 font-size: 0.9em;
                 padding: 10px;
-               @include hoverify {
-
+                @include hoverify {
                     color: white;
                     text-decoration: underline;
                 }
-
             }
         }
     }
@@ -83,7 +124,6 @@
         text-align: center;
         a {
             background-color: transparent;
-
         }
     }
 }
@@ -101,7 +141,6 @@
         float: right;
         //@include iconify ( block, $ico-arrow-right);
         margin: 0 7px;
-
     }
 }
 
@@ -114,6 +153,5 @@
         //@include iconify ( block, $ico-arrow-right);
         margin: 0 5px;
         transform: rotate(180deg);
-
     }
 }
